--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
-  <script src="../bower_components/blanket/dist/qunit/blanket.min.js" data-cover-flags="debug"></script>
+  <script src="../bower_components/blanket/dist/qunit/blanket.min.js"></script>
   <script src="../src/extend.js" data-cover></script>
   <script src="./extend_test.js"></script>
   <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css" />
