Incorporated requirejs and module design into the extend library.

--- a/test/index.html
+++ b/test/index.html
@@ -7,9 +7,7 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../bower_components/requirejs/require.js"></script>
-  <script src="test/require_config.js" data-main="test/extend_suite.js"></script>
-  <script src="test/extend_suite.js"></script>
+  <script src="../bower_components/requirejs/require.js" data-main="test/require_config.js"></script>
   <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css" />
 </body>
 </html>
